[package]
name = "bauble"
version = "0.0.0"
authors = ["Cakefish <cakefish@cakefish.com>"]
edition = "2021"
description = "An extensible file format built for asset systems"
repository = "https://github.com/Cakefish/bauble"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "language", "assets"]
categories = ["parser-implementations"]

[features]
hashbrown = ["dep:hashbrown"]
enumset = ["dep:enumset"]

[dependencies]
ariadne = "0.1.5"
bauble_macros = { path = "../bauble_macros" }
chumsky = "=1.0.0-alpha.6"
hashbrown = { version = "0.14", optional = true }
enumset = { version = "1.1.3", optional = true }
impl-trait-for-tuples = "0.2.2"
indexmap = "1.9.1"
lazy_static = "1.4.0"
num-traits = "0.2.15"
paste = "1.0.11"
petgraph = "0.6.3"
rust_decimal = "1.27.0"
